--- a/css/style.css
+++ b/css/style.css
@@ -546,11 +546,26 @@ nav a {
     padding-right: 10%;
 }
 
-.groupcards .dropdown .tracker-navi {
-    margin-top: 80px;
-    max-width: 70%;
+.tracker-navi {
+    display: inline-flex;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.t-button {
+    background-color: var(--caramel);
+    border-radius: 8px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.content-navi {
+    padding: 25px;
+}
+
+.text-navi {
+    color: var(--espresso-brown);
 }
 
 .cal {
