--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 h1,h2 {
+    font-family: var(--title-font);
     text-align: left;
     color: var(--espresso-brown);
 }
@@ -546,26 +547,48 @@ nav a {
     padding-right: 10%;
 }
 
+.tracker {
+    background-color: var(--creamy-latte);
+}
+
+.trackHeader {
+    margin-top: 100px;
+    margin-left: 90px;
+    margin-bottom: 50px;
+    color: var(--espresso-brown);
+}
+
 .tracker-navi {
     display: inline-flex;
-    margin-top: 100px;
+    justify-content: center;
+    border-radius: 24px;
+    border: 2px solid #dec8b0;
+    background-color: #dec8b0;
+    padding: 5px;
+    margin: auto;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
 }
 
 .t-button {
-    background-color: var(--caramel);
-    border-radius: 8px;
-    margin-left: 20px;
-    margin-right: 20px;
+    background-color: var(--espresso-brown);
+    border-radius: 12px;
+    margin: 10px;
+}
+
+t-button:selection {
+    background-color: var(--cappuccino)
 }
 
 .content-navi {
     padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .text-navi {
-    color: var(--espresso-brown);
+    color: var(--creamy-latte);
 }
 
 .cal {
