--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ footer {
 }
 
 .dark-footer {
-    color: var(--espresso-brown)
+    color: var(--espresso-brown);
 }
 
 /* Custom Orders Page */
