Change order images to cards

--- a/project-draft/css/style.css
+++ b/project-draft/css/style.css
@@ -344,7 +344,7 @@ footer p {
     justify-content: space-around;
 }
 
-.custom-drinks img {
+.card img {
     max-width: 250px;
     margin: 70px 10px 0;
     border-radius: 11%;
