updated card code

--- a/project-draft/css/cardcode.css
+++ b/project-draft/css/cardcode.css
@@ -53,690 +53,70 @@
 	--hot: #FF7C7C;
 }
 
-
-
-/* my version */
-
-.information {
-    background-color: #fff;
-    padding: 1.5rem;
-
-    .title {
-        font-size: 1.5rem;
-		color: var(--c-void);
-		line-height: 1.25;
-		& + * {
-			margin-top: 1rem;
-		}
-	}
-
-	/* tags */
-	.tags {
-		margin-top: 1rem;
-		margin-bottom: .5rem;
-	}
-
-	.tag {
-		display: inline-block;
-		font-weight: 600;
-		background-color: var(--creamy-latte);
-		color: var(--dark-roast);
-		font-size: 0.875rem;
-		padding: 0.5em 0.75em;
-		line-height: 1;
-		border-radius: 6px;
-		/* margin-top: .5rem; */
-        margin-bottom: .5rem;
-	}
-
-
-	/*
-    --espresso-brown: #38232A;
-    --cappuccino: #A86846;
-    --caramel: #C7A27A;
-    --milk-foam: #F8F2EB;
-    --creamy-latte: #EFE3C8;
-    --mint: #86C1CF;
-	--cold: #ABEFFF;
-	--colder-blue: #0A5F73;
-	--hot: #FF7C7C; 
-	*/
-    .info {
-		color: var(--c-charcoal);
-		& + * {
-			margin-top: 1.25rem;
-		}
-	}
-
-    .button {
-		font: inherit;
-		line-height: 1;
-		background-color: var(--c-white);
-		border: 2px solid var(--c-indigo);
-		color: var(--c-indigo);
-		padding: 0.5em 1em;
-		border-radius: 6px;
-		font-weight: 500;
-		display: inline-flex;
-		align-items: center;
-		justify-content: space-between;
-		gap: 0.5rem;
-		&:hover,
-		&:focus {
-			background-color: var(--c-indigo);
-			color: var(--c-white);
-		}
-	}
-
-    .details {
-		display: flex;
-		gap: 1rem;
-		div {
-			padding: .75em 1em;
-			background-color: var(--c-titan-white);
-			border-radius: 8px;
-			display: flex;
-			flex-direction: column-reverse;
-			gap: .125em;
-			flex-basis: 50%;
-		}
-		
-		dt {
-			font-size: .875rem;
-			color: var(--c-cold-purple);
-		}
-		
-		dd {
-			color: var(--c-indigo);
-			font-weight: 600;
-			font-size: 1.25rem;
-		}
-	}
-
-	.card-attribute {
-		padding-top: 1.5em;
-		padding-bottom: 1.5em;
-		border-top: 2px solid var(--var-line-dark);
-	}
+.user-attribute {
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
+	border-bottom: 2px solid var(--var-line-dark);
 }
 
-img {
-    width: 100%;
-    border-radius: 15px;
-    display: block;
-    box-sizing: border-box;
-    overflow-clip-margin: content-box;
-    overflow: clip;
-}
-
-a.hero-image-container {
-    position: relative;
-    display: block;
-}
-
-
-/* version 1 */
-article {
-    --img-scale: 1.001;
-    --title-color: black;
-    --link-icon-translate: -20px;
-    --link-icon-opacity: 0;
-    position: relative;
-    border-radius: 16px;
-    box-shadow: none;
-    background: #fff;
-    transform-origin: center;
-    transition: all 0.4s ease-in-out;
-    overflow: hidden;
-  }
-  
-  article a::after {
-    position: absolute;
-    inset-block: 0;
-    inset-inline: 0;
-    cursor: pointer;
-    content: "";
-  }
-  
-  /* basic article elements styling */
-  article h2 {
-    margin: 0 0 18px 0;
-    font-family: "Bebas Neue", cursive;
-    font-size: 1.9rem;
-    letter-spacing: 0.06em;
-    color: var(--title-color);
-    transition: color 0.3s ease-out;
-  }
-  
-  figure {
-    margin: 0;
-    padding: 0;
-    aspect-ratio: 16 / 9;
-    overflow: hidden;
-  }
-  
-  article img {
-    max-width: 100%;
-    transform-origin: center;
-    transform: scale(var(--img-scale));
-    transition: transform 0.4s ease-in-out;
-  }
-  
-  .article-body {
-    padding: 24px;
-  }
-  
-  article a {
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none;
-    color: #28666e;
-  }
-  
-  article a:focus {
-    outline: 1px dotted #28666e;
-  }
-  
-  article a .icon {
-    min-width: 24px;
-    width: 24px;
-    height: 24px;
-    margin-left: 5px;
-    transform: translateX(var(--link-icon-translate));
-    opacity: var(--link-icon-opacity);
-    transition: all 0.3s;
-  }
-  
-  /* using the has() relational pseudo selector to update our custom properties */
-  article:has(:hover, :focus) {
-    --img-scale: 1.1;
-    --title-color: #28666e;
-    --link-icon-translate: 0;
-    --link-icon-opacity: 1;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  }
-  
-  
-  /************************ 
-  Generic layout (demo looks)
-  **************************/
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    padding: 48px 0;
-    font-family: "Figtree", sans-serif;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    background-image: linear-gradient(45deg, #7c9885, #b5b682);
-    min-height: 100vh;
-  }
-  
-  .articles {
-    display: grid;
-    max-width: 1200px;
-    margin-inline: auto;
-    padding-inline: 24px;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    gap: 24px;
-  }
-  
-  @media screen and (max-width: 960px) {
-    article {
-      container: card/inline-size;
-    }
-    .article-body p {
-      display: none;
-    }
-  }
-  
-  @container card (min-width: 380px) {
-    .article-wrapper {
-      display: grid;
-      grid-template-columns: 100px 1fr;
-      gap: 16px;
-    }
-    .article-body {
-      padding-left: 0;
-    }
-    figure {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-    figure img {
-      height: 100%;
-      aspect-ratio: 1;
-      object-fit: cover;
-    }
-  }
-  
-  .sr-only:not(:focus):not(:active) {
-    clip: rect(0 0 0 0); 
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap; 
-    width: 1px;
-  }
-
-
-  /* different style card */
-  /* 
-=========================
-Fonts
-=========================
-
-font-family: 'Outfit', sans-serif;
-
-*/
-
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
-
-/* 
-========================
-Variables
-========================
-*/
-
-
-/* 
-=======================
-Setup
-=======================
-*/
-
-html {
-    box-sizing: border-box;
-}
-
-*, *::before, *::after {
-    box-sizing: inherit;
-    margin: 0;
-}
-
-body {
-    background-color: var(--var-main-darkest);
-}
-
-/* img {
-    width: 100%;
-    border-radius: 15px;
-    display: block;
-    box-sizing: border-box;
-    overflow-clip-margin: content-box;
-    overflow: clip;
-} */
-
-a {
-    color: inherit;
-}
-
-/* 
-
-Eye view
-
-https://i.postimg.cc/9MtT4GZY/view.png' border='0' alt='view */
-
-/*
-=========================
-Font Styling
-=========================
-*/
-
-h1 {
-    font: var(--var-heading);
-    color: var(--var-lightest);
-    padding: 1.2em 0;
-}
-
-h2 {
-    font: var(--var-small-heading);
-    color: var(--var-lightest);
-    /* padding on .coin-base */
-}
-
-p {
-    font: var(--var-para);
-    color: var(--var-soft-blue);
-}
-
-span {
-    color: white;
-}
-/* 
-=====================
-Classes
-=====================
-*/
-
-/* LAYOUT */
-
-.card-container {
-    width: 100%;
-    max-width: 400px;
-    margin: 2em auto;
-    background-color: var(--var-card-dark);
-    border-radius: 15px;
-    margin-bottom: 1rem;
-    padding: 2rem;
-}
-
-div.flex-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-div.coin-base, .time-left, .card-attribute {
-    display: flex;
-    align-items: center;
-    padding: 1em 0;
-}
-
-.card-attribute {
-    padding-bottom: 1.5em;
-    border-top: 2px solid var(--var-line-dark);
-}
-
-a.hero-image-container {
-    position: relative;
-    display: block;
-}
-
-
-
-/* Details */
-
-img.eye {
-    position: absolute;
-    width: 100%;
-    max-width: 2em;
-    top: 44%;
-    left: 43%;
-}
-
-@media (min-width:400px) {
-  img.eye {
-    max-width: 3em;
-}
-}
-
-.hero-image-container::after {
-    content: '';
-    background-image: url("https://i.postimg.cc/9MtT4GZY/view.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 5rem;
-    background-color: hsla(178, 100%, 50%, 0.3);
-    width: 100%;
-    height: 100%;
-    border-radius: 1rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    z-index: 2;
-    opacity: 0;
-    transition: opacity 0.3s ease-out;
-}
-
-.hero-image-container:hover::after {
-  opacity: 1;
-}
-
-.small-image {
-    width: 1.2em;
-    margin-right: .5em;
-}
-
-.small-avatar {
+.small-avatar1 {
     width: 2em;
-    border-radius: 200px;
-    outline: 2px solid white;
+    border-radius: 150px;
     margin-right: 1.4em;
 }
 
-div.attribution {
-    margin: 0 auto;
-    width: 100%;
-    font: var(--var-para);
-    text-align: center;
-    padding: 1.5em 0 4em 0;
-    color: var(--var-line-dark);
-}
-.attribution a {
-    color: var(--var-soft-blue);
-}
-
-@media (min-width:600px) {
-    body {
-        font-size: 18px;
-    }
-}
-
-/* card version 3 */
-@import url("https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap");
-
-*,
-*:after,
-*:before {
-	box-sizing: border-box;
-}
-
-body {
-	font-family: "Spline Sans", sans-serif;
-	line-height: 1.5;
-	min-height: 100vh;
-	background-color: var(--c-ash);
-}
-
-.cards {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
-	flex-wrap: wrap;
-	justify-content: center;
-	gap: 2.5rem;
-	width: 90%;
-	max-width: 1000px;
-	margin: 10vh auto;
-}
-
 .card {
-	border-radius: 16px;
-	box-shadow: 0 30px 30px -25px rgba(#4133B7, .25);
-	max-width: 300px;
+	background-color: #fff;
+	padding: 1.5rem;
 }
 
-/* .information {
-	background-color: var(--c-white);
-	padding: 1.5rem;
+.tags {
+	margin-top: 1rem;
+	margin-bottom: .5rem;
+}
 
-	.tag {
-		display: inline-block;
-		background-color: var(--c-titan-white);
-		color: var(--c-indigo);
-		font-weight: 600;
-		font-size: 0.875rem;
-		padding: 0.5em 0.75em;
-		line-height: 1;
-		border-radius: 6px;
-		& + * {
-			margin-top: 1rem;
-		}
-	}
+.tag {
+	display: inline-block;
+	background-color: var(--creamy-latte);
+	color: var(--dark-roast);
+	font-size: 0.875rem;
+	padding: 0.5em 0.75em;
+	line-height: 1;
+	border-radius: 8px;
+	margin-bottom: .5rem;
+}
 
-	.title {
-		font-size: 1.5rem;
-		color: var(--c-void);
-		line-height: 1.25;
-		& + * {
-			margin-top: 1rem;
-		}
-	}
+.favbutton {
+	border-radius: 18px;
+	padding: .5rem 1rem;
+	background-color: var(--espresso-brown);
+    color: var(--milk-foam);
+}
 
-	.info {
-		color: var(--c-charcoal);
-		& + * {
-			margin-top: 1.25rem;
-		}
-	}
+.favicon {
+	width: 13px;
+	height: 13px;
+}
 
-	.button {
-		font: inherit;
-		line-height: 1;
-		background-color: var(--c-white);
-		border: 2px solid var(--c-indigo);
-		color: var(--c-indigo);
-		padding: 0.5em 1em;
-		border-radius: 6px;
-		font-weight: 500;
-		display: inline-flex;
-		align-items: center;
-		justify-content: space-between;
-		gap: 0.5rem;
-		&:hover,
-		&:focus {
-			background-color: var(--c-indigo);
-			color: var(--c-white);
-		}
-	}
-	
-	.details {
-		display: flex;
-		gap: 1rem;
-		div {
-			padding: .75em 1em;
-			background-color: var(--c-titan-white);
-			border-radius: 8px;
-			display: flex;
-			flex-direction: column-reverse;
-			gap: .125em;
-			flex-basis: 50%;
-		}
-		
-		dt {
-			font-size: .875rem;
-			color: var(--c-cold-purple);
-		}
-		
-		dd {
-			color: var(--c-indigo);
-			font-weight: 600;
-			font-size: 1.25rem;
-		}
-	}
-} */
+/* from style.css (do not copy over) */
+.primary-button {
+    border-radius: 18px;
+    padding: .5rem 1rem;
+    background-color: var(--espresso-brown);
+    color: var(--milk-foam);
+}
 
+.secondary-button {
+    border-radius: 8px;
+    padding: .5rem 1rem;
+    background-color: var(--cappuccino);
+    color: var(--milk-foam);
+}
 
-.plan {
-	padding: 10px;
-	background-color: var(--c-white);
-	color: var(--c-del-rio);
-	
-	strong {
-		font-weight: 600;
-		color: var(--c-coffee);
-	}
-	
-	.inner {
-		padding: 20px;
-		padding-top: 40px;
-		background-color: var(--c-fair-pink);
-		border-radius: 12px;
-	position: relative;
-		overflow: hidden;
-	}
-	
-	.pricing {
-		position: absolute;
-		top: 0;
-		right: 0;
-		background-color: var(--c-apricot);
-		border-radius: 99em 0 0 99em;
-		display: flex;
-		align-items: center;
-		padding: .625em .75em;
-		font-size: 1.25rem;
-		font-weight: 600;
-		color: var(--c-coffee);
-		small {
-			color: var(--c-del-rio);
-			font-size: .75em;
-			margin-left: .25em;
-		}
-		
-	}
-	
-	.title {
-		font-weight: 600;
-		font-size: 1.25rem;
-		color: var(--c-coffee);
-		& + * {
-			margin-top: .75rem;
-		}
-	}
-	
-	.info {
-		& + * {
-			margin-top: 1rem;
-		}
-	}
-	
-	.features {
-		display: flex;
-		flex-direction: column;
-		li {
-			display: flex;
-			align-items: center;
-			gap: .5rem;
-			& + * {
-				margin-top: .75rem;
-			}
-		}
-		
-		.icon {
-			background-color: var(--c-java);
-			display: inline-flex;
-			align-items: center;
-			justify-content: center;
-			color: var(--c-white);
-			border-radius: 50%;
-			width: 20px;
-			height: 20px;
-			svg {
-				width: 14px;
-				height: 14px;
-			}
-		}
-		
-		& + * {
-			margin-top: 1.25rem;
-		}
-	}
-	
-	button {
-		font: inherit;
-		background-color: var(--c-indigo);
-		border-radius: 6px;
-		color: var(--c-white);
-		font-weight: 500;
-		font-size: 1.125rem;
-		width: 100%;
-		border: 0;
-		padding: 1em;
-		&:hover,
-		&:focus {
-			background-color: var(--c-governor);
-		}
-	}
-	
-	
+.tertiary-button {
+    border-radius: 8px;
+    border: 4px solid;
+    padding: .5rem 1rem;
+    border-color: var(--espresso-brown);
+    color: var(--milk-foam);
 }
