--- a/src/index.css
+++ b/src/index.css
@@ -410,11 +410,10 @@ img.profile-picture {
 }
 
 footer {
-    position:fixed;
-   left:0px;
-   bottom:0px;
-   height:30px;
+    position:relative;
+   bottom:0;
    width:100%;
+   height:60px; 
 }
 
 nav a {
