--- a/project-draft/css/cardcode.css
+++ b/project-draft/css/cardcode.css
@@ -1,20 +1,4 @@
 :root {
-    
-    font-size: 15px;
-    
-    /* Primary */
-    --var-soft-blue: hsl(215, 51%, 70%);
-    --var-cyan: hsl(178, 100%, 50%);
-    /* Neutral */
-    --var-main-darkest: hsl(217, 54%, 11%);
-    --var-card-dark: hsl(216, 50%, 16%);
-    --var-line-dark: hsl(215, 32%, 27%);
-    --var-lightest: white;
-    
-    /* Fonts */
-    --var-heading: normal normal 600 1.5em/1.6em 'Outfit', sans-serif;
-    --var-small-heading: normal normal 400 1em/1em 'Outfit', sans-serif;
-    --var-para: normal normal 300 1em/1.55em 'Outfit', sans-serif;
 
     /* basics */
 	--c-white: #fff;
@@ -40,6 +24,25 @@
 	--c-indigo: #6558d3;
 	--c-governor: #4133B7;
 
+	/* DO NOT TRANSFER THE FOLLOWING CODE!*/
+	--header-height: 3.5rem;
+
+	/*Font and typography*/
+    --title-font: "Rosarivo", sans-serif;
+    --body-font: "Poppins", sans-serif;
+    --biggest-font-size: 2rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
+
+    /* Font weight */
+    --font-medium: 500;
+    --font-semi-bold: 600;
+    --font-bold: 700;
+
+    /* z index */
+    --z-tooltip: 10;
+    --z-fixed: 100;
+
 	/* coffee style */
 	--dark-roast: #574248;
     --espresso-brown: #38232A;
@@ -53,10 +56,34 @@
 	--hot: #FF7C7C;
 }
 
+/* background image */
+.tracker {
+	background-color: var(--caramel);
+}
+
+.sectionTracker h3 {
+	margin-bottom: 0.5rem;
+}
+
+.allCards p {
+	margin-bottom: 0.5rem;
+	margin-top: 0.5rem;
+}
+
+.allCards {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 2.5rem;
+	margin: 10vh auto;
+}
+
 .user-attribute {
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
-	border-bottom: 2px solid var(--var-line-dark);
+	border-bottom: 2px solid #000
 }
 
 .small-avatar1 {
@@ -68,6 +95,8 @@
 .card {
 	background-color: #fff;
 	padding: 1.5rem;
+	border-radius: 16px;
+	max-width: 300px;
 }
 
 .tags {
@@ -84,6 +113,20 @@
 	line-height: 1;
 	border-radius: 8px;
 	margin-bottom: .5rem;
+}
+
+.coffeeimg {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.allCards .buttons {
+	margin-top: 1rem;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5rem;
+	width: 100%;
 }
 
 .favbutton {
