--- a/src/index.css
+++ b/src/index.css
@@ -257,21 +257,24 @@ img {
 
 /* Reference: https://stackoverflow.com/questions/43259704/css-how-to-center-align-a-list-element-with-left-aligned-text#:~:text=I%20would%20suggest%20adding%20text,from%20the%20parent%2C%20as%20desired. */
 div {
-    display: inline-block;
+    display: block;
     text-align: left;
     /* padding: 0.5em 0; */
 }
 
-.options p {
-    display: flex;
+.options li {
+    display: block;
+    text-align: center;
+    width: 50%;
     background-color: var(--espresso-brown);
     border-radius: 6px;
     padding: .5rem 4rem;
-    margin: 1rem;
+    margin: auto;
+    margin-bottom: 1rem;
     color: white;
 }
 
-.options p:hover {
+.options li:hover {
     background-color: var(--creamy-latte);
     color: var(--espresso-brown);
 }
