--- a/src/index.css
+++ b/src/index.css
@@ -255,6 +255,10 @@ img {
     font-family: var(--title-font);
 }
 
+.question p:last-child {
+    font-size: 26px;
+}
+
 /* Reference: https://stackoverflow.com/questions/43259704/css-how-to-center-align-a-list-element-with-left-aligned-text#:~:text=I%20would%20suggest%20adding%20text,from%20the%20parent%2C%20as%20desired. */
 div {
     display: block;
@@ -265,7 +269,7 @@ div {
 .options li {
     display: block;
     text-align: center;
-    width: 50%;
+    width: 65%;
     background-color: var(--espresso-brown);
     border-radius: 6px;
     padding: .5rem 4rem;
@@ -823,8 +827,41 @@ div.uploadImg {
         font-weight: bold;
     }
 
+    .options li {
+        width: 60%;
+    }
+
+/* 
     .question p:last-child {
         font-size: 26px;
+    } */
+}
+
+/* Quiz Page for bigger screens */
+@media (min-width: 768px) {
+    .options li {
+        width: 50%;
+    }
+}
+
+/* Quiz Page for bigger screens */
+@media (min-width: 992px) {
+    .options li {
+        width: 40%;
+    }
+}
+
+/* Quiz Page for bigger screens */
+@media (min-width: 1200px) {
+    .options li {
+        width: 30%;
+    }
+}
+
+/* Quiz Page for bigger screens */
+@media (min-width: 1400px) {
+    .options li {
+        width: 25%;
     }
 }
 
